tests/error/setchar_index.src
.IPPcode18
defvar GF@a
defvar GF@b
move GF@a string@abc
setchar GF@a int@-1 GF@a
